--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-.*swp
+# Never commit build specific folders
+node_modules/
+dist/
+
+# Never commit individual sessions
+.vscode/
+.DS_Store
+
+# Never commit temporary storage
+*.swp
+
+# Never commit logs
+*.log
+*.err
+
+# Never commit environment variables
 .env
